Bug 262949 - Notification about new attached screen pops up when it doesn‘t need to
Summary: Notification about new attached screen pops up when it doesn‘t need to
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_randr (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gustavo Pichorim Boiko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-12 14:09 UTC by Kai Uwe Broulik
Modified: 2011-08-03 21:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-01-12 14:09:31 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

When attaching a new monitor and then configuring it using systemsettings, a popup in the monitor configuration pops up and states that  monitor has been attached/removed and if you would like to configure it. This dialog is useless since you are already in the respective configuration dialog and clicking on “Configure” opens yet another instance of the same kcm module (randr).
A notification right away when that monitor is attached would be nice but the notification is useless at the point where it pops up at the moment. It just states the obvious.

Reproducible: Always
Comment 1 Mantas P 2011-01-13 11:59:36 UTC
the same on gentoo 64bit, KDE-4.5.95
Comment 2 Mantas P 2011-01-31 12:09:37 UTC
ok, here for me bug is fixed on gentoo 64bit, KDE-4.6
Comment 3 Kai Uwe Broulik 2011-08-03 21:45:27 UTC
Git commit 64fe606cc39cc801efaf520b69352b38dad3ed34 by Kai Uwe Broulik.
Committed on 28/07/2011 at 20:26.
Pushed by broulik into branch 'master'.

Fix the dialog "A new monitor has been attached" popping up although the monitor config dialog is already opened.

The dbus Service is no longer "kcm_display" but "kcm_randr"

BUG: 262949

M  +1    -1    kcontrol/randr/module/randrmonitor.cpp

http://commits.kde.org/kde-workspace/64fe606cc39cc801efaf520b69352b38dad3ed34

----------

Git commit 559279bc4b94ab1b4c33d51a88f7391b5bf62681 by Kai Uwe Broulik.
Committed on 28/07/2011 at 20:26.
Pushed by broulik into branch 'KDE/4.7'.

Fix the dialog "A new monitor has been attached" popping up although the monitor config dialog is already opened.

The dbus Service is no longer "kcm_display" but "kcm_randr"

BUG: 262949
(cherry picked from commit 64fe606cc39cc801efaf520b69352b38dad3ed34)

M  +1    -1    kcontrol/randr/module/randrmonitor.cpp

http://commits.kde.org/kde-workspace/559279bc4b94ab1b4c33d51a88f7391b5bf62681