Fix the dialog "A new monitor has been attached" popping up although the monitor config dialog is already opened.

The dbus Service is no longer "kcm_display" but "kcm_randr"

BUG: 262949